--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ant-design-pro",
+  "name": "galop-web",
   "version": "1.0.0",
   "private": true,
-  "description": "An out-of-box UI solution for enterprise applications",
+  "description": "学科竞赛管理系统前端部分",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
