--- a/package.json
+++ b/package.json
@@ -31,30 +31,59 @@
     "tsc": "tsc",
     "ui": "umi ui"
   },
-  "husky": { "hooks": { "pre-commit": "npm run lint-staged" } },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged"
+    }
+  },
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
     "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": ["prettier --write"]
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write"
+    ]
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 10"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
     "@ant-design/icons": "^4.0.0-alpha.19",
     "@ant-design/pro-layout": "^5.0.0",
     "@ant-design/pro-table": "^2.0.0",
     "@antv/data-set": "^0.11.1",
+    "@antv/g2plot": "^1.0.3",
+    "@antv/l7": "^2.0.0",
+    "@antv/l7-maps": "^2.0.0",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.isequal": "^4.5.5",
+    "@types/react-router": "^5.0.2",
     "antd": "^4.0.0-rc.1",
+    "bizcharts": "^3.5.3-beta.0",
+    "bizcharts-plugin-slider": "^2.1.1-beta.1",
+    "braft-editor": "^2.3.9",
     "classnames": "^2.2.6",
     "dva": "^2.6.0-beta.16",
+    "gg-editor": "^2.0.2",
     "lodash": "^4.17.11",
+    "lodash-decorators": "^6.0.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "mockjs": "^1.0.1-beta3",
     "moment": "^2.24.0",
+    "numeral": "^2.0.6",
+    "nzh": "^1.0.3",
     "omit.js": "^1.0.2",
     "path-to-regexp": "2.4.0",
+    "prop-types": "^15.5.10",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
+    "react-fittext": "^1.0.0",
     "react-helmet": "^5.2.1",
+    "react-router": "^4.3.1",
     "redux": "^4.0.1",
     "umi": "^2.13.0",
     "umi-plugin-antd-icon-config": "^1.0.2",
@@ -96,8 +125,12 @@
     "umi-plugin-pro": "^1.0.2",
     "umi-types": "^0.5.9"
   },
-  "optionalDependencies": { "puppeteer": "^2.0.0" },
-  "engines": { "node": ">=10.0.0" },
+  "optionalDependencies": {
+    "puppeteer": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "checkFiles": [
     "src/**/*.js*",
     "src/**/*.ts*",
